# autoclicker

./: Cargo.toml  README.md  build.rs
src/: main.rs
